# TCC

./: .gitattributes  .gitignore  LSTM.py  LSTMForKubernetes.py  README.md  README_KUBERNETES_DATASET.md  claude_desktop_config.json  scriptDados.py
.cursor/: mcp.json
Kubernetes-mcp-server/: Dockerfile  k8s-mcp.py  k8s.py  main.py  requirements.txt
Kubernetes-mcp-server/k8s/: configmap-code.yaml  configmap-requirements.yaml  deployment.yaml  role.yaml  roleBinding.yaml  service.yaml
Time-LLM/: README_PARAMETROS.md  pyproject.toml  requirements.txt  run_m4.py  run_main_windows_fixed.py  train_gpt2.ps1
Time-LLM/models/: TimeLLM.py
Time-LLM/utils/: tools.py
kubectl-mcp-server/: kubectl_server.py
my-mcp-server/mcp-server-demo/: pyproject.toml  server.py  server2.py  server3.py  settings.json
n8n-mcp-docker/: Deployment.yaml  Dockerfile  docker-compose.yml  k8s-imsilva-deploy.yaml  k8s-mcp-agent.json  k8s_mcp.py  n8n-simples_1.yaml
