[project]
name = "time-llm"
version = "0.1.0"
description = "Time Series Forecasting by Reprogramming Large Language Models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "accelerate>=0.28.0",
    "einops>=0.7.0",
    "matplotlib>=3.8.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "tqdm>=4.65.0",
    "peft>=0.4.0",
    "transformers>=4.35.0",
    "sentencepiece>=0.2.0",
]
